# poetry-django-starter

./: README.md  pyproject.toml
config/: settings.py
