[tool.poetry]
name = "poetry-django-starter"
version = "0.1.0"
description = ""
authors = ["LeeJongEun <bellsilver7@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_django_starter"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
